implemented maximum number of participants.